# sum-primes

./: .clang-format  CMakeLists.txt  README.md
sum_primes_MPI/: CMakeLists.txt  main.cpp  sum_primes_mpi.cpp  sum_primes_mpi.h  utilities.cpp  utilities.h
sum_primes_MPI/test/: CMakeLists.txt  sum_primes_mpi_tests.cpp
sum_primes_serial/: CMakeLists.txt  main.cpp  sum_primes_serial.cpp  sum_primes_serial.h
sum_primes_serial/test/: CMakeLists.txt  sum_primes_serial_tests.cpp
